--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	
 	<!-- Arquivo Principal da Aplicação -->
 	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>		
+		<welcome-file>pages/principal.xhtml</welcome-file>		
 	</welcome-file-list>
 	
 	<!-- Configuração do Servlet do JSF -->
